--- a/LowerModule.cfg
+++ b/LowerModule.cfg
@@ -1,7 +1,7 @@
 // lowerModule.cfg v1.0.0.1
 // KAE Systems
 // created: 2020 03 04
-// updated: 2020 03 05 adm-frb
+// updated: 2020 03 06 adm-frb
 
 PART
 {
@@ -12,23 +12,18 @@ PART
 	MODEL
 	{
 		model = SquadExpansion/MakingHistory/Parts/FuelTank/Assets/Size1_5_Size1_Adapter_02
-		// mainTextureURL = SquadExpansion/MakingHistory/Parts/FuelTank/Assets/Size1_5_TankAdapters_ALT02
-		 // _BumpMap =SquadExpansion/MakingHistory/Parts/FuelTank/Assets/Size1_5_TankAdapters_ALT02nm
 		position = 0, 0.31, 0
 	}
 	MODEL
 	{
 		model = Squad/Parts/Aero/fairings/fairingSize1
-		//position = 0, -0.041, 0
 		scale = 1.5, 1.0, 1.5
 		rotation = 0.0, 180, 0.0
-// 		TextureNormalURL = Squad/Parts/Aero/fairings/FairingBaseNormals
 	}
 	MODEL
 	{
 		model = Squad/Parts/Aero/fairings/AutoTruss
 		scale = 1.5, 1.5, 1.5
-//		position = 0.0, 0.22, 0.0
 		position = 0, 0.179, 0
 	}
 	rescaleFactor = 1
@@ -53,23 +48,6 @@ PART
 
 	node_stack_interstage06a = 0.0, 4.69, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_interstage06b = 0.0, 4.75, 0.0, 0.0, 1.0, 0.0, 1
-
-
-// use the below to adjust nodes (or adjust by model positions):
-	// attN = interstage01a,Null_0_0|0.939999998|0_0|-1|0_0|0.939999998|0_0|-1|0
-	// attN = interstage01b,Null_0_0|1|0_0|1|0_0|1|0_0|1|0
-	// attN = interstage02a,Null_0_0|1.69000006|0_0|-1|0_0|1.69000006|0_0|-1|0
-	// attN = interstage02b,Null_0_0|1.75|0_0|1|0_0|1.75|0_0|1|0
-	// attN = interstage03a,Null_0_0|2.44000006|0_0|-1|0_0|2.44000006|0_0|-1|0
-	// attN = interstage03b,Null_0_0|2.5|0_0|1|0_0|2.5|0_0|1|0
-	// attN = interstage04a,Null_0_0|3.19000006|0_0|-1|0_0|3.19000006|0_0|-1|0
-	// attN = interstage04b,Null_0_0|3.25|0_0|1|0_0|3.25|0_0|1|0
-	// attN = interstage05a,Null_0_0|3.94000006|0_0|-1|0_0|3.94000006|0_0|-1|0
-	// attN = interstage05b,Null_0_0|4|0_0|1|0_0|4|0_0|1|0
-	// attN = interstage06a,Null_0_0|4.69000006|0_0|-1|0_0|4.69000006|0_0|-1|0
-	// attN = interstage06b,Null_0_0|4.75|0_0|1|0_0|4.75|0_0|1|0
-	// attN = top,Size1p5.Size1.Adapter.02_4293497416_0|0.219999999|0_0|1|0_0|0.219999999|0_0|1|0
-	// attN = bottom,Null_0_0|-0.200000003|0_0|-1|0_0|-0.200000003|0_0|-1|0
 
 	TechRequired = advRocketry
 	entryCost = 1550
@@ -107,7 +85,51 @@ PART
 	childStageOffset = 1
 	inverseStageCarryover = false
 
-	stagingIcon = FUEL_TANK
+	stagingIcon = MYSTERY_PART
+
+// Module Command
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		hasHibernation = true
+		hibernation = false
+		hibernateOnWarp = true
+		hibernationMultiplier = 0.00125
+		defaultControlPointDisplayName = #autoLOC_6011003 //#autoLOC_6011003 = Default
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.005
+		}
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = #autoLOC_6011004 //#autoLOC_6011004 = Reversed
+			orientation = 0,0,180
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 15
+		YawTorque = 15
+		RollTorque = 15
+		torqueResponseSpeed = 15
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.45
+		}
+	}
+
+//  Module SAS
+	MODULE
+	{
+		name = ModuleSAS
+		SASServiceLevel = 0
+	}
 
 	MODULE
 	{
@@ -238,6 +260,13 @@ PART
 
 	RESOURCE
 	{
+		name = ElectricCharge
+		amount = 150
+		maxAmount = 150
+	}
+
+	RESOURCE
+	{
 		name = LiquidFuel
 		amount = 72
 		maxAmount = 72
@@ -248,27 +277,7 @@ PART
 		amount = 88
 		maxAmount = 88
 	}
-	
-	MODULE
-	{
-		name = ModuleReactionWheel
-		PitchTorque = 15
-		YawTorque = 15
-		RollTorque = 15
-		torqueResponseSpeed = 15
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 0.45
-		}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 150
-		maxAmount = 150
-	}
 }
 
 // CC BY-NC-SA-4.0
 // adm-frb and zer0Kerbal
-  
