--- a/LowerModule.cfg
+++ b/LowerModule.cfg
@@ -1,7 +1,7 @@
-// lowerModule.cfg v1.0.0.1
+// lowerModule.cfg v1.0.0.2
 // KAE Systems
 // created: 2020 03 04
-// updated: 2020 03 06 adm-frb
+// updated: 2020 03 06 zer0Kerbal
 
 PART
 {
