--- a/LowerModule.cfg
+++ b/LowerModule.cfg
@@ -1,7 +1,7 @@
-// lowerModule.cfg v1.0.0.2
+// lowerModule.cfg v1.0.0.3
 // KAE Systems
 // created: 2020 03 04
-// updated: 2020 03 06 zer0Kerbal
+// updated: 2020 03 06 zer0Kerbal, adm-frb
 
 PART
 {
@@ -85,8 +85,7 @@ PART
 	childStageOffset = 1
 	inverseStageCarryover = false
 
-	stagingIcon = MYSTERY_PART
-
+	stagingIcon = COMMAND_POD
 // Module Command
 	MODULE
 	{
