--- a/LowerModule.cfg
+++ b/LowerModule.cfg
@@ -85,7 +85,7 @@ PART
 	childStageOffset = 1
 	inverseStageCarryover = false
 
-	stagingIcon = MYSTERY_PART
+	stagingIcon = COMMAND_POD
 
 // Module Command
 	MODULE
