--- a/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
+++ b/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
@@ -1,84 +1,87 @@
-// PhoebusSM.cfg v1.0.0.1
+// PhoebusSM.cfg v1.0.0.2
 // KAE SYSTEMS
 // created: 2020 03 07
-// updated: 2020 03 07 
+// updated: 2020 03 08
 
 PART
 {
 	name = WELDPhoebusSM
 	module = Part
 	author = adm-frb
-	
+
 	MODEL
 	{
 		model = ReStockPlus/Assets/Structural/restock-adapter-1875-25-1
 		position = 0,13.9089003,0
 		rotation = 180,0,0
-		MODULE
-  		{
-    			VARIANT
-    			{
-      				name = BlackAndWhite
-      				displayName = #autoLOC_8007122
-      				themeName = BlackAndWhite
-      				primaryColor = #ffffff
-      				secondaryColor = #000000
-      				GAMEOBJECTS
-      				{
-        				FlatAdapterGreyLarge = true
-        				FlatAdapterWhiteLarge = false
-        				FlatAdapterMetalLarge = false
-        				FlatAdapterOrangeLarge = false
-      				}
-    			}
-    			VARIANT
-    			{
-      				name = White
-      				displayName = #autoLOC_8007119
-      				themeName = White
-      				primaryColor = #ffffff
-      				secondaryColor = #ffffff
-      				GAMEOBJECTS
-      				{
-        				FlatAdapterGreyLarge = false
-        				FlatAdapterWhiteLarge = true
-        				FlatAdapterMetalLarge = false
-        				FlatAdapterOrangeLarge = false
-      				}
-    			}
-    			VARIANT
-    			{
-      				name = Orange
-      				displayName = #autoLOC_8007123
-      				themeName = Orange
-      				primaryColor = #f49841
-      				secondaryColor = #f49841
-      				GAMEOBJECTS
-      				{
-        				FlatAdapterGreyLarge = false
-        				FlatAdapterWhiteLarge = false
-        				FlatAdapterMetalLarge = false
-        				FlatAdapterOrangeLarge = true
-      				}
-    			}
-    			VARIANT
-    			{
-      				name = Metal
-      				displayName = #LOC_Restock_variant-surface_metal
-      				themeName = Metal
-      				primaryColor = #6f6e6d
-      				secondaryColor = #6f6e6d
-      				GAMEOBJECTS
-      				{
+	}
+  	MODULE
+  	{
+    		name = ModulePartVariants
+    		baseVariant = Metal
+    		useMultipleDragCubes = false
+    		VARIANT
+    		{
+      			name = BlackAndWhite
+      			displayName = #autoLOC_8007122
+      			themeName = BlackAndWhite
+      			primaryColor = #ffffff
+      			secondaryColor = #000000
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGreyLarge = true
+        			FlatAdapterWhiteLarge = false
+        			FlatAdapterMetalLarge = false
+        			FlatAdapterOrangeLarge = false
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = White
+      			displayName = #autoLOC_8007119
+      			themeName = White
+      			primaryColor = #ffffff
+      			secondaryColor = #ffffff
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGreyLarge = false
+        			FlatAdapterWhiteLarge = true
+        			FlatAdapterMetalLarge = false
+        			FlatAdapterOrangeLarge = false
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = Orange
+      			displayName = #autoLOC_8007123
+      			themeName = Orange
+      			primaryColor = #f49841
+      			secondaryColor = #f49841
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGreyLarge = false
+        			FlatAdapterWhiteLarge = false
+        			FlatAdapterMetalLarge = false
+        			FlatAdapterOrangeLarge = true
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = Metal
+      			displayName = #LOC_Restock_variant-surface_metal
+      			themeName = Metal
+      			primaryColor = #6f6e6d
+      			secondaryColor = #6f6e6d
+      			GAMEOBJECTS
+      			{
         			FlatAdapterGreyLarge = false
         			FlatAdapterWhiteLarge = false
         			FlatAdapterMetalLarge = true
         			FlatAdapterOrangeLarge = false
-      				}
-    			}
-		}
+      			}
+    		}
 	}
-  
+	
 	MODEL
 	{
 		model = Bluedog_DB/Parts/Centaur/bluedog_CentaurT_ShortTank
@@ -88,10 +91,90 @@ PART
 	
 	MODEL
 	{
-	model = Bluedog_DB/Parts/Centaur/bluedog_CentaurT_WideTank
-	position = 0,12.7684002,0
-	rotation = 0,0,0,1	
-	rescaleFactor = 0.75
+		model = Bluedog_DB/Parts/Centaur/bluedog_CentaurT_WideTank
+		position = 0,12.765,0
+		rotation = 180,0,0,0	
+		scale = 0.75,0.75,0.75
+	}
+	
+	MODEL
+	{
+		model = ReStockPlus/Assets/Structural/restock-adapter-1875-125-1
+		position = -0.00039351359,12.48,0.0038459003
+		rotation = 180,0,0
+	}
+	MODULE
+  	{
+    		name = ModulePartVariants
+    		baseVariant = MetalBottom
+		useMultipleDragCubes = false
+    		VARIANT
+    		{
+      			name = BlackAndWhiteBottom
+      			displayName = #autoLOC_8007122
+      			themeName = BlackAndWhite
+      			primaryColor = #ffffff
+      			secondaryColor = #000000
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGrey = true
+        			FlatAdapterWhite = false
+        			FlatAdapterMetal = false
+        			FlatAdapterOrange = false
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = WhiteBottom
+      			displayName = #autoLOC_8007119
+      			themeName = White
+      			primaryColor = #ffffff
+      			secondaryColor = #ffffff
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGrey = false
+        			FlatAdapterWhite = true
+        			FlatAdapterMetal = false
+        			FlatAdapterOrange = false
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = OrangeBottom
+      			displayName = #autoLOC_8007123
+      			themeName = Orange
+      			primaryColor = #f49841
+      			secondaryColor = #f49841
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGrey = false
+        			FlatAdapterWhite = false
+        			FlatAdapterMetal = false
+        			FlatAdapterOrange = true
+      			}
+    		}
+    		VARIANT
+    		{
+      			name = MetalBottom
+      			displayName = #LOC_Restock_variant-surface_metal
+      			themeName = Metal
+      			primaryColor = #6f6e6d
+      			secondaryColor = #6f6e6d
+      			GAMEOBJECTS
+      			{
+        			FlatAdapterGrey = false
+        			FlatAdapterWhite = false
+        			FlatAdapterMetal = true
+        			FlatAdapterOrange = false
+			}
+		}
+	}
+
+  	MODEL
+	{
+		model = Bluedog_DB/Parts/Engines/bluedog_E1
+		position = -0.00039351359,12.25,0.0038459003
+		rotation = 0,0,0,1
 	}
 	
 	rescaleFactor = 1
@@ -105,8 +188,8 @@ PART
 	subcategory = 0
 	title = Phoebus Service Module
 	manufacturer = KAE Systems
-	description = Service Module. Warrenty void on reentry.
-	tags = fueltank ?lfo liquid oxidizer propellant rocket aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport weld 
+	description = During Selene 25, with interest in Mun exploration waning, the government of the Kingdom of Kerbin began to debate about whether the Selene Program should continue or not. Some thought that the focus should shift to Kerbin and that a reusable Space Plane Program was the path to follow, claiming it could lift more weight to Kerbin orbit at a fraction of the cost of the Brimstone series of expendable rockets. Others dissagreed, arguing that the Brimstone rockets was proven technologically and shouldn't be abandoned, especially with the Krussians having reached the Mun themselves: "Do ya want a Red Mun?!" Wernher von Kerman cried at a Commons Select Committee. "I say we continue the Mun Landings and even attempt to land on Duna!" Ultimately it was decided to continue making the Brimstone expendable rockets, but evolve the single-use Selene Space Capsules into one that was reusable. The Phoebus Space Capsule was the result. This is the Service Module for that capsule.
+	tags = Fuel Tank LFO Liquid Oxidizer Monopropellant Service Module 
 	attachRules = 1,0,1,1,0
 	mass = 0.25
 
@@ -134,5 +217,266 @@ PART
 	childStageOffset = 1
 	inverseStageCarryover = false
 	
+	node_stack_top = 0.0, 13.996, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, 11.4, 0.0, 0.0, -1.0, 0.0, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+
+	attachRules = 1,0,1,1,0
+
+EFFECTS
+	{
+		running_engine
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Bluedog_DB/Sounds/KW/sound_altloop2
+				volume = 0.0 0.0
+				volume = 0.01 0.1
+				volume = 1.0 1.3
+				pitch = 0.0 1
+				pitch = 1.0 1
+				loop = true
+			}
+
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare
+				modelName = Bluedog_DB/FX/PlumeParty/Engines/Tundra/keroSLFlare1
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.01 0.1
+				emission = 1.0 2.0
+				speed = 0.0 2.0
+				speed = 1.0 2.0
+				energy = 0.0 0.5
+				energy = 1.0 1.0
+				localScale = 1.3,1.3,1.3
+				//localPosition = 0,0,1.8
+			}
+
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock
+				modelName = Bluedog_DB/FX/PlumeParty/Engines/Tundra/keroSLMach1
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.01 0.1
+				emission = 1.0 2.0
+				speed = 0.0 2.0
+				speed = 1.0 2.0
+				energy = 0.0 1.0
+				energy = 1.0 1.0
+				localScale = 1.3,1.3,1.3
+				//localPosition = 0,0,1.8
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 0.5
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 0.8
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+				localScale = 1.3,1.3,1.3
+				//localOffset = 0,0,1.8
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 0.8
+				loop = false
+			}
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleEnginesFX
+		thrustVectorTransformName = thrustTransform
+		exhaustDamage = True
+		ignitionThreshold = 0.1
+		minThrust = 0
+		maxThrust = 471
+		heatProduction = 192
+		EngineType = LiquidFuel
+		runningEffectName = running_engine
+
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+		}
+		atmosphereCurve
+		{
+			key = 0 292
+			key = 1 261
+			key = 7 0.001
+
+		}
+	}
+
+	MODULE
+	{
+	  name = ModuleB9PartSwitch
+	  switcherDescription = Engine Config
+	  switcherDescriptionPlural = Engine Configs
+		moduleID = engineSwitch
+
+	  SUBTYPE
+	  {
+	    name = E1
+	    title =  Prometheus RB-1E471 "Cordele"
+	    descriptionDetail = <b>Thrust:</b> 420.9 kN ASL / 471 kN Vac.\n<b>Isp:</b> 261 s ASL / 292 s Vac.
+			defaultSubtypePriority = 0
+	  }
+
+	  SUBTYPE
+	  {
+	    name = E1-2
+	    title = Prometheus RB-1E571 "Cordele"
+	    descriptionSummary = Thrust and Isp increase.
+	    descriptionDetail = <b>Thrust:</b> 491.3 kN ASL / 562.5 kN Vac.\n<b>Isp:</b> 269 s ASL / 308 s Vac.
+	    upgradeRequired = bluedog_E1_Gen2
+	    addedCost = 1000
+			defaultSubtypePriority = 1
+
+	    MODULE
+	    {
+	      IDENTIFIER
+	      {
+	        name = ModuleEnginesFX
+	      }
+
+	      DATA
+	      {
+					maxThrust = 562.5 // 118%
+
+	        atmosphereCurve
+	        {
+	          key = 0 308
+						key = 1 269
+						key = 7 0.001
+	        }
+	      }
+	    }
+	  }
+	}
+
+	MODULE
+	{
+        name = FXModuleAnimateThrottle
+        animationName = E1_Heat_Anim
+        dependOnEngineState = True
+        responseSpeed = 0.001
+	}
+
+	MODULE
+	{
+		name = ModuleAlternator
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 7
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.5
+		maxDistance = 30
+		falloff = 1.5
+		thrustTransformName = thrustTransform
+	}
+
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 0
+		maxAmount = 0
+		isTweakable = false
+		hideFlow = true
+	}
+
+	MODULE
+	{
+		name = ModuleGimbal
+		gimbalResponseSpeed = 15
+		useGimbalResponseSpeed = true
+		gimbalTransformName = gimbalTransform
+		gimbalRange = 6
+	}
+
+	MODULE
+	{
+
+		name = FXModuleLookAtConstraint
+
+		CONSTRAINLOOKFX
+		{
+		targetName = gimbalBone1
+		rotatorsName = gimbalArm1_1
+		}
+		CONSTRAINLOOKFX
+		{
+		targetName = gimbalBone1
+		rotatorsName = gimbalArm1_2
+		}
+		CONSTRAINLOOKFX
+		{
+		targetName = gimbalBone2
+		rotatorsName = gimbalArm2_1
+		}
+		CONSTRAINLOOKFX
+		{
+		targetName = gimbalBone2
+		rotatorsName = gimbalArm2_2
+		}
+
+	}
+	RESOURCE
+	{
+		name = LiquidFuel
+		amount = 72
+		maxAmount = 72
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		amount = 88
+		maxAmount = 88
+	}
 }
 	
