--- a/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
+++ b/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
@@ -1,7 +1,7 @@
-// PhoebusSM.cfg v1.0.0.2
+// PhoebusSM.cfg v1.0.0.3
 // KAE SYSTEMS
 // created: 2020 03 07
-// updated: 2020 03 08
+// updated: 2020 03 09 
 
 PART
 {
@@ -12,7 +12,7 @@ PART
 	MODEL
 	{
 		model = ReStockPlus/Assets/Structural/restock-adapter-1875-25-1
-		position = 0,13.9089003,0
+		position = 0,1.125,0
 		rotation = 180,0,0
 	}
   	MODULE
@@ -85,22 +85,22 @@ PART
 	MODEL
 	{
 		model = Bluedog_DB/Parts/Centaur/bluedog_CentaurT_ShortTank
-		position = 0,13.4299002,0
+		position = 0,0.665,0
 		rotation = 0,0,0,1
 	}
 	
 	MODEL
 	{
 		model = Bluedog_DB/Parts/Centaur/bluedog_CentaurT_WideTank
-		position = 0,12.765,0
-		rotation = 180,0,0,0	
+		position = 0,0,0
+		rotation = 180,0.0,0,0	
 		scale = 0.75,0.75,0.75
 	}
 	
 	MODEL
 	{
 		model = ReStockPlus/Assets/Structural/restock-adapter-1875-125-1
-		position = -0.00039351359,12.48,0.0038459003
+		position = 0,-0.275,0
 		rotation = 180,0,0
 	}
 	MODULE
@@ -173,13 +173,12 @@ PART
   	MODEL
 	{
 		model = Bluedog_DB/Parts/Engines/bluedog_E1
-		position = -0.00039351359,12.25,0.0038459003
+		position = -0.0,-0.5,0.0
 		rotation = 0,0,0,1
 	}
 	
 	rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.55438, 0.0, 0.0, 1.0, 0.0, 2
 	
 	TechRequired = advRocketry
 	entryCost = 1550
@@ -188,7 +187,7 @@ PART
 	subcategory = 0
 	title = Phoebus Service Module
 	manufacturer = KAE Systems
-	description = During Selene 25, with interest in Mun exploration waning, the government of the Kingdom of Kerbin began to debate about whether the Selene Program should continue or not. Some thought that the focus should shift to Kerbin and that a reusable Space Plane Program was the path to follow, claiming it could lift more weight to Kerbin orbit at a fraction of the cost of the Brimstone series of expendable rockets. Others dissagreed, arguing that the Brimstone rockets was proven technologically and shouldn't be abandoned, especially with the Krussians having reached the Mun themselves: "Do ya want a Red Mun?!" Wernher von Kerman cried at a Commons Select Committee. "I say we continue the Mun Landings and even attempt to land on Duna!" Ultimately it was decided to continue making the Brimstone expendable rockets, but evolve the single-use Selene Space Capsules into one that was reusable. The Phoebus Space Capsule was the result. This is the Service Module for that capsule.
+	description = Warrenty void during reentry
 	tags = Fuel Tank LFO Liquid Oxidizer Monopropellant Service Module 
 	attachRules = 1,0,1,1,0
 	mass = 0.25
@@ -217,13 +216,12 @@ PART
 	childStageOffset = 1
 	inverseStageCarryover = false
 	
-	node_stack_top = 0.0, 13.996, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, 11.4, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_top = 0.0, 1.146, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -1.4, 0.0, 0.0, -1.0, 0.0, 1
+	
 
-	attachRules = 1,0,1,1,0
 
-EFFECTS
+	EFFECTS
 	{
 		running_engine
 		{
@@ -247,10 +245,10 @@ EFFECTS
 				emission = 0.0 0.0
 				emission = 0.01 0.1
 				emission = 1.0 2.0
-				speed = 0.0 2.0
-				speed = 1.0 2.0
+				speed = 0.0 0.5
+				speed = 0.5 0.5
 				energy = 0.0 0.5
-				energy = 1.0 1.0
+				energy = 0.5 0.5
 				localScale = 1.3,1.3,1.3
 				//localPosition = 0,0,1.8
 			}
@@ -263,9 +261,9 @@ EFFECTS
 				emission = 0.0 0.0
 				emission = 0.01 0.1
 				emission = 1.0 2.0
-				speed = 0.0 2.0
-				speed = 1.0 2.0
-				energy = 0.0 1.0
+				speed = 0.0 0.5
+				speed = 0.5 0.5
+				energy = 0.0 0.5
 				energy = 1.0 1.0
 				localScale = 1.3,1.3,1.3
 				//localPosition = 0,0,1.8
@@ -277,7 +275,7 @@ EFFECTS
 			{
 				channel = Ship
 				clip = sound_vent_soft
-				volume = 1.0
+				volume = 0.25
 				pitch = 0.5
 				loop = false
 			}
@@ -288,7 +286,7 @@ EFFECTS
 			{
 				channel = Ship
 				clip = sound_explosion_low
-				volume = 1.0
+				volume = 0.25
 				pitch = 0.8
 				loop = false
 			}
@@ -307,7 +305,7 @@ EFFECTS
 			{
 				channel = Ship
 				clip = sound_explosion_low
-				volume = 1.0
+				volume = 0.25
 				pitch = 0.8
 				loop = false
 			}
@@ -321,7 +319,7 @@ EFFECTS
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 471
+		maxThrust = 71.5
 		heatProduction = 192
 		EngineType = LiquidFuel
 		runningEffectName = running_engine
@@ -344,53 +342,6 @@ EFFECTS
 			key = 7 0.001
 
 		}
-	}
-
-	MODULE
-	{
-	  name = ModuleB9PartSwitch
-	  switcherDescription = Engine Config
-	  switcherDescriptionPlural = Engine Configs
-		moduleID = engineSwitch
-
-	  SUBTYPE
-	  {
-	    name = E1
-	    title =  Prometheus RB-1E471 "Cordele"
-	    descriptionDetail = <b>Thrust:</b> 420.9 kN ASL / 471 kN Vac.\n<b>Isp:</b> 261 s ASL / 292 s Vac.
-			defaultSubtypePriority = 0
-	  }
-
-	  SUBTYPE
-	  {
-	    name = E1-2
-	    title = Prometheus RB-1E571 "Cordele"
-	    descriptionSummary = Thrust and Isp increase.
-	    descriptionDetail = <b>Thrust:</b> 491.3 kN ASL / 562.5 kN Vac.\n<b>Isp:</b> 269 s ASL / 308 s Vac.
-	    upgradeRequired = bluedog_E1_Gen2
-	    addedCost = 1000
-			defaultSubtypePriority = 1
-
-	    MODULE
-	    {
-	      IDENTIFIER
-	      {
-	        name = ModuleEnginesFX
-	      }
-
-	      DATA
-	      {
-					maxThrust = 562.5 // 118%
-
-	        atmosphereCurve
-	        {
-	          key = 0 308
-						key = 1 269
-						key = 7 0.001
-	        }
-	      }
-	    }
-	  }
 	}
 
 	MODULE
@@ -420,14 +371,65 @@ EFFECTS
 		falloff = 1.5
 		thrustTransformName = thrustTransform
 	}
-
+	RESOURCE
+	{
+		 name = MonoPropellant
+		 amount = 100
+		 maxAmount = 100
+	}	
+	RESOURCE
+	{
+		 name = LiquidFuel
+		 amount = 360
+		 maxAmount = 360
+	}	
+	RESOURCE
+	{
+		 name = Oxidizer
+		 amount = 440
+		 maxAmount = 440
+	}	
 	RESOURCE
 	{
 		name = ElectricCharge
+		amount = 200
+		maxAmount = 200
+	}	
+	RESOURCE
+	{
+		name = Food
+		amount = 113.2
+		maxAmount = 113.2
+	}
+	RESOURCE
+	{
+		name = Water
+		amount = 74.8
+		maxAmount = 74.8
+	}
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 11466.9
+		maxAmount = 11466.9
+	}
+	RESOURCE
+	{
+		name = CarbonDioxide
 		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
+		maxAmount = 18800.1
+	}
+	RESOURCE
+	{
+		name = WasteWater
+		amount = 0
+		maxAmount = 180.9
+	}
+	RESOURCE
+	{
+		name = Waste
+		amount = 0
+		maxAmount = 19.5
 	}
 
 	MODULE
@@ -465,18 +467,6 @@ EFFECTS
 		rotatorsName = gimbalArm2_2
 		}
 
-	}
-	RESOURCE
-	{
-		name = LiquidFuel
-		amount = 72
-		maxAmount = 72
-	}
-	RESOURCE
-	{
-		name = Oxidizer
-		amount = 88
-		maxAmount = 88
 	}
 }
 	
