--- a/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
+++ b/GameData/KAE_SYSTEMS/Parts/Engine/PhoebusSM.cfg
@@ -190,7 +190,8 @@ PART
 	description = Warrenty void during reentry
 	tags = Fuel Tank LFO Liquid Oxidizer Monopropellant Service Module 
 	attachRules = 1,0,1,1,0
-	mass = 0.25
+	mass = 2.021
+	CoMOffset =  0.0,-0.5,0.0
 
 	dragModelType = default
 	maximum_drag = 0.2
